ini tambahan code bagian booking

--- a/addwisata.html
+++ b/addwisata.html
@@ -60,7 +60,7 @@
         <tr>
             <td colspan="6">
                 <div class="tombol">
-                    <a href="#"><button type="submit">Simpan</button></a>
+                    <a href="pemesanan.html"><button type="submit">Simpan</button></a>
                 </div>
             </td>
         </tr>
