--- a/budaya.html
+++ b/budaya.html
@@ -31,7 +31,7 @@
     <h2>DESTINASI</h2>
     <div class="bot">
         <div class="budaya1">
-            <a class="klikgambar" href=""><div class="kemiren">
+            <a class="klikgambar" href="pemesanan.html"><div class="kemiren">
                 <img src="Gambar Mlakujatim/desa kemiren osing, banyuwangi.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
@@ -40,7 +40,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="jono">
+            <a class="klikgambar" href="pemesanan.html"><div class="jono">
                 <img src="Gambar Mlakujatim/desa jono.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
@@ -49,7 +49,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="bumiaji">
+            <a class="klikgambar" href="pemesanan.html"><div class="bumiaji">
                 <img src="Gambar Mlakujatim/desa bumiaji.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
@@ -58,7 +58,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="tengger">
+            <a class="klikgambar" href="pemesanan.html"><div class="tengger">
                 <img src="Gambar Mlakujatim/desa tengger, bromo.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
@@ -69,7 +69,7 @@
             </div></a>
         </div> 
         <div class="budaya2">
-            <a class="klikgambar" href=""><div class="kaliandra">
+            <a class="klikgambar" href="pemesanan.html"><div class="kaliandra">
                 <img src="Gambar Mlakujatim/desa kaliandra.png" alt="budaya"><br>
                 <div class="container">
                     <p>
@@ -78,7 +78,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="ngrayudan">
+            <a class="klikgambar" href="pemesanan.html"><div class="ngrayudan">
                 <img src="Gambar Mlakujatim/desa wisata ngrayudan.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
@@ -87,7 +87,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="osing">
+            <a class="klikgambar" href="pemesanan.html"><div class="osing">
                 <img src="Gambar Mlakujatim/desa wisata osing banyuwangi.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="kerapansapi">
+            <a class="klikgambar" href="pemesanan.html"><div class="kerapansapi">
                 <img src="Gambar Mlakujatim/kerapan sapi.jpg" alt="budaya"><br>
                 <div class="container">
                     <p>
