--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
         <h4 class="subhome">DESTINASI POPULER</h4>
         <div class="museum1">
             <div class="angkutmalang">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/museum angkut malang.jpg" alt="museum"><br>
+                <a class="hold" href="pemesanan.html"><img src="Gambar Mlakujatim/museum angkut malang.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
                         Museum Angkut Malang <br>
@@ -52,16 +52,16 @@
                 </div></a>
             </div>
             <div class="satwa">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/pantai kenjeran surabaya.jpg" alt=""><br>
+                <a class="hold" href="pemesanan.html"><img src="Gambar Mlakujatim/watu ulo.jpg" alt=""><br>
                 <div class="container">
                     <p>
-                        Pantai Kenjeran <br>
-                        Rp600.000
+                        Pantai Watu Ulo <br>
+                        Rp400.000
                     </p>
                 </div></a>
             </div>
             <div class="brawijaya">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/pantai balekambang malang.jpg" alt="museum"><br>
+                <a class="hold" href="pemesanan.html"><img src="Gambar Mlakujatim/pantai balekambang malang.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
                         Pantai Balekambang <br>
@@ -70,7 +70,7 @@
                 </div></a>
             </div>
             <div class="tantular">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/taman nasional baluran.jpg" alt="museum"><br>
+                <a class="hold" href="pemesanan.html"><img src="Gambar Mlakujatim/taman nasional baluran.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
                         Taman Nasional Baluran <br>
@@ -81,7 +81,7 @@
         </div> 
         <div class="museum2">
             <div class="trisula">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/Monumen trisula blitar.jpg" alt="museum"><br>
+                <a class="hold" href="pemesanan.html"><img src="Gambar Mlakujatim/Monumen trisula blitar.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
                         Museum Trisula <br>
@@ -90,7 +90,7 @@
                 </div></a>
             </div>
             <div class="karno">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/desa kaliandra.png" alt="museum"><br>
+                <a class="hold" href="pemesanan.html"><img src="Gambar Mlakujatim/desa kaliandra.png" alt="museum"><br>
                 <div class="container">
                     <p>
                         Desa Kaliandra <br>
@@ -99,7 +99,7 @@
                 </div></a>
             </div>
             <div class="november10">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/Ranu-Kumbolo-Malang-300x178.jpg" alt="museum"><br>
+                <a class="hold" href="pemesanan.html"><img src="Gambar Mlakujatim/Ranu-Kumbolo-Malang-300x178.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
                         Ranu Kumbolo <br>
@@ -108,7 +108,7 @@
                 </div></a>
             </div>
             <div class="tubuh">
-                <a class="hold" href="#"><img src="Gambar Mlakujatim/desa kemiren osing, banyuwangi.jpg" alt="museum"><br>
+                <a class="hold" href="pemesanan.html"><img src="Gambar Mlakujatim/desa kemiren osing, banyuwangi.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
                         Desa Kemiren <br>
@@ -122,11 +122,11 @@
         <h4 class="subhome">VIDEO SINGKAT</h4>
         <video width="240" height="180" controls>
             <source src="Gambar Mlakujatim/y2mate.com - Bromo-Tengger-Semeru National Park, Indonesia in 4K (Ultra HD)_480p.mp4" type="video/mp4">
-          Your browser does not support the video tag.
+          Your browser does not support the video
         </video>
         <video id="vid2" width="240" height="180" controls>
             <source src="Gambar Mlakujatim/y2mate.com - Ranu kumbolo adventure with canon M5_480p.mp4" type="video/mp4">
-          Your browser does not support the video tag.
+          Your browser does not support the video
         </video>
     </div>
     <div class="artikel">
@@ -141,7 +141,7 @@
                         beberapa kota yang juga terkenal sebagai.. 
                     </p>
                 </div><br>
-                <a id="baca" href="#"><h4 class="baca">BACA</h4></a>
+                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
             <div class="osing">
                 <h5>Tempat Wisata Lebaran di Banyuwangi</h5><br>
@@ -163,7 +163,7 @@
                         di Jawa Timur, Kota Blitar memang men...
                     </p>
                 </div><br>
-                <a id="baca" href="#"><h4 class="baca">BACA</h4></a>
+                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
         </div>
         <br>
@@ -177,7 +177,7 @@
                         memiliki arti yang tersendiri. Selain itu..
                     </p>
                 </div><br>
-                <a id="baca" href="#"><h4 class="baca">BACA</h4></a>
+                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
             <div class="surabaya">
                 <h5>Liburan Akhir Tahun di Surabaya</h5><br>
@@ -188,7 +188,7 @@
                         tahun di Indonesia, maka kota Surabaya...
                     </p>
                 </div><br>
-                <a id="baca" href="#"><h4 class="baca">BACA</h4></a>
+                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
             <div class="lamongan">
                 <h5>17 Destinasi Libur Lebaran di Lamongan</h5><br>
@@ -199,7 +199,7 @@
                         provinsi di Indonesia yang bisa dikatakan...
                     </p>
                 </div><br>
-                <a id="baca" href="#"><h4 class="baca">BACA</h4></a>
+                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
         </div>
     </div>
