--- a/jadi bayar.html
+++ b/jadi bayar.html
@@ -46,10 +46,10 @@
             </p><br>
             <div class="jadi">
                 <div class="jadiya">
-                    <a href="#"><button type="submit">Ya</button></a>
+                    <a class="pencet" href="#"><button type="submit">Ya</button></a>
                 </div>
                 <div class="jaditdk">
-                    <a href="#"><button type="submit">Tidak</button></a>
+                    <a class="pencet" href="#"><button type="submit">Tidak</button></a>
                 </div>
             </div>
         </form>
