--- a/kuliner.html
+++ b/kuliner.html
@@ -31,7 +31,7 @@
     <h2>DESTINASI</h2>
     <div class="bot">
         <div class="kuliner1">
-            <a class="klikgambar" href=""><div class="baksomalang">
+            <a class="klikgambar" href="pemesanan.html"><div class="baksomalang">
                 <img src="Gambar Mlakujatim/makanan khas jawatimur/bakso malang (malang).jpg" alt="kuliner"><br>
                 <div class="container">
                     <p>
@@ -40,7 +40,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="bebeksinjay">
+            <a class="klikgambar" href="pemesanan.html"><div class="bebeksinjay">
                 <img src="Gambar Mlakujatim/makanan khas jawatimur/bebek sinjay (bangkalan, madura).jpg" alt="kuliner"><br>
                 <div class="container">
                     <p>
@@ -49,7 +49,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="lodhoayam">
+            <a class="klikgambar" href="pemesanan.html"><div class="lodhoayam">
                 <img src="Gambar Mlakujatim/makanan khas jawatimur/lodho ayam (tulungagung).jpg" alt="kuliner"><br>
                 <div class="container">
                     <p>
@@ -58,7 +58,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="lontongbalap">
+            <a class="klikgambar" href="pemesanan.html"><div class="lontongbalap">
                 <img src="Gambar Mlakujatim/makanan khas jawatimur/lontong balap (surabaya).jpg" alt="kuliner"><br>
                 <div class="container">
                     <p>
@@ -69,7 +69,7 @@
             </div></a>
         </div> 
         <div class="kuliner2">
-            <a class="klikgambar" href=""><div class="rawonsetan">
+            <a class="klikgambar" href="pemesanan.html"><div class="rawonsetan">
                 <img src="Gambar Mlakujatim/makanan khas jawatimur/rawon setan mbak endang (surabaya).jpg" alt="kuliner"><br>
                 <div class="container">
                     <p>
@@ -78,7 +78,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="rujaksoto">
+            <a class="klikgambar" href="pemesanan.html"><div class="rujaksoto">
                 <img src="Gambar Mlakujatim/makanan khas jawatimur/rujak soto (banyuwangi).jpg" alt="kuliner"><br>
                 <div class="container">
                     <p>
@@ -87,7 +87,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="sotolamongan">
+            <a class="klikgambar" href="pemesanan.html"><div class="sotolamongan">
                 <img src="Gambar Mlakujatim/makanan khas jawatimur/soto lamongan (lamongan).jpg" alt="kuliner"><br>
                 <div class="container">
                     <p>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="tahutek">
+            <a class="klikgambar" href="pemesanan.html"><div class="tahutek">
                 <img src="Gambar Mlakujatim/makanan khas jawatimur/tahu tek(lamongan atau surabaya).jpg" alt="kuliner"><br>
                 <div class="container">
                     <p>
