--- a/metodebyr.html
+++ b/metodebyr.html
@@ -34,21 +34,21 @@
     <div class="metode">
         <div class="metodeatas">
             <div class="bni">
-                <a href="#"><img src="bni.png" alt="Logo Bank BNI"></a>
+                <a class="noneklik" href="jadi bayar.html"><img src="Gambar Mlakujatim/bank/bni.png" alt="Logo Bank BNI"></a>
             </div>
             <div class="bri">
-                <a href="#"><img src="bri.png" alt="Logo Bank BRI"></a>
+                <a class="noneklik" href="jadi bayar.html"><img src="Gambar Mlakujatim/bank/bri.png" alt="Logo Bank BRI"></a>
             </div>
             <div class="mandiri">
-                <a href="#"><img src="bankmandiri.png" alt="Logo Bank Mandiri"></a>
+                <a class="noneklik" href="jadi bayar.html"><img src="Gambar Mlakujatim/bank/mandiri 2.png" alt="Logo Bank Mandiri"></a>
             </div>
         </div>
         <div class="metodebwh">
             <div class="bca">
-                <a href="#"><img src="bca.png" alt="logo Bank BCA"></a>
+                <a class="noneklik" href="jadi bayar.html"><img src="Gambar Mlakujatim/bank/BCA.png" alt="logo Bank BCA"></a>
             </div>
             <div class="jatim">
-                <a href="#"><img src="bankjatim.png" alt="Logo Bank Jatim"></a>
+                <a class="noneklik" href="jadi bayar.html"><img src="Gambar Mlakujatim/bank/bank jatim.jpg" alt="Logo Bank Jatim"></a>
             </div>   
         </div>
     </div>
