--- a/museum.html
+++ b/museum.html
@@ -31,7 +31,7 @@
     <h2>DESTINASI</h2>
     <div class="bot">
         <div class="museum1">
-            <a class="klikgambar" href=""><div class="angkutmalang">
+            <a class="klikgambar" href="pemesanan.html"><div class="angkutmalang">
                 <img src="Gambar Mlakujatim/museum angkut malang.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -40,7 +40,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="satwa">
+            <a class="klikgambar" href="pemesanan.html"><div class="satwa">
                 <img src="Gambar Mlakujatim/Museum satwa.jpg" alt=""><br>
                 <div class="container">
                     <p>
@@ -49,7 +49,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="brawijaya">
+            <a class="klikgambar" href="pemesanan.html"><div class="brawijaya">
                 <img src="Gambar Mlakujatim/museum brawijaya.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -58,7 +58,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="tantular">
+            <a class="klikgambar" href="pemesanan.html"><div class="tantular">
                 <img src="Gambar Mlakujatim/museum mpu tantular.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -69,7 +69,7 @@
             </div></a>
         </div> 
         <div class="museum2">
-            <a class="klikgambar" href=""><div class="trisula">
+            <a class="klikgambar" href="pemesanan.html"><div class="trisula">
                 <img src="Gambar Mlakujatim/Monumen trisula blitar.jpg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -78,7 +78,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="karno">
+            <a class="klikgambar" href="pemesanan.html"><div class="karno">
                 <img src="Gambar Mlakujatim/museum bung karno, blitar.jpeg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -87,7 +87,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="november10">
+            <a class="klikgambar" href="pemesanan.html"><div class="november10">
                 <img src="Gambar Mlakujatim/museum 10 novembe, surabaya.jpeg" alt="museum"><br>
                 <div class="container">
                     <p>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="tubuh">
+            <a class="klikgambar" href="pemesanan.html"><div class="tubuh">
                 <img src="Gambar Mlakujatim/museum tubuh batu, malang.jpeg" alt="museum"><br>
                 <div class="container">
                     <p>
