--- a/pantai.html
+++ b/pantai.html
@@ -31,7 +31,7 @@
     <h2>DESTINASI</h2>
     <div class="bot">
         <div class="pantai1">
-            <a class="klikgambar" href=""><div class="balekambang">
+            <a class="klikgambar" href="pemesanan.html"><div class="balekambang">
                 <img src="Gambar Mlakujatim/pantai balekambang malang.jpg" alt="pantai"><br>
                 <div class="container">
                     <p>
@@ -40,7 +40,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="kenjeran">
+            <a class="klikgambar" href="pemesanan.html"><div class="kenjeran">
                 <img src="Gambar Mlakujatim/pantai kenjeran surabaya.jpg" alt=""><br>
                 <div class="container">
                     <p>
@@ -49,7 +49,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="kutang">
+            <a class="klikgambar" href="pemesanan.html"><div class="kutang">
                 <img src="Gambar Mlakujatim/pantai kutang lamongan.png" alt="pantai"><br>
                 <div class="container">
                     <p>
@@ -58,7 +58,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="watuulo">
+            <a class="klikgambar" href="pemesanan.html"><div class="watuulo">
                 <img src="Gambar Mlakujatim/watu ulo.jpg" alt="pantai"><br>
                 <div class="container">
                     <p>
@@ -69,7 +69,7 @@
             </div></a>
         </div> 
         <div class="pantai2">
-            <a class="klikgambar" href=""><div class="papuma">
+            <a class="klikgambar" href="pemesanan.html"><div class="papuma">
                 <img src="Gambar Mlakujatim/papuma.jpg" alt="pantai"><br>
                 <div class="container">
                     <p>
@@ -78,7 +78,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="kodok">
+            <a class="klikgambar" href="pemesanan.html"><div class="kodok">
                 <img src="Gambar Mlakujatim/pantai-kodok.jpg" alt="pantai"><br>
                 <div class="container">
                     <p>
@@ -87,7 +87,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="klayar">
+            <a class="klikgambar" href="pemesanan.html"><div class="klayar">
                 <img src="Gambar Mlakujatim/Pantai-Klayar-Pacitan-300x166.jpg" alt="pantai"><br>
                 <div class="container">
                     <p>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="pulaumerah">
+            <a class="klikgambar" href="pemesanan.html"><div class="pulaumerah">
                 <img src="Gambar Mlakujatim/Pantai-Pulau-Merah-Banyuwangi.jpg" alt="pantai"><br>
                 <div class="container">
                     <p>
