--- a/alam.html
+++ b/alam.html
@@ -31,7 +31,7 @@
     <h2>DESTINASI</h2>
     <div class="bot">
         <div class="alam1">
-            <a class="klikgambar" href=""><div class="baluran">
+            <a class="klikgambar" href="pemesanan.html"><div class="baluran">
                 <img src="Gambar Mlakujatim/taman nasional baluran.jpg" alt="alam"><br>
                 <div class="container">
                     <p>
@@ -40,7 +40,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="sempu">
+            <a class="klikgambar" href="pemesanan.html"><div class="sempu">
                 <img src="Gambar Mlakujatim/Pulau-Sempu-Malang-300x212.jpg" alt="alam"><br>
                 <div class="container">
                     <p>
@@ -49,7 +49,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="ranukumbolo">
+            <a class="klikgambar" href="pemesanan.html"><div class="ranukumbolo">
                 <img src="Gambar Mlakujatim/Ranu-Kumbolo-Malang-300x178.jpg" alt="alam"><br>
                 <div class="container">
                     <p>
@@ -58,7 +58,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="ijen">
+            <a class="klikgambar" href="pemesanan.html"><div class="ijen">
                 <img src="Gambar Mlakujatim/Kawah-Ijen-Bondowoso-300x200.jpg" alt="alam"><br>
                 <div class="container">
                     <p>
@@ -69,7 +69,7 @@
             </div></a>
         </div> 
         <div class="alam2">
-            <a class="klikgambar" href=""><div class="bromo">
+            <a class="klikgambar" href="pemesanan.html"><div class="bromo">
                 <img src="Gambar Mlakujatim/bromo.jpg" alt="alam"><br>
                 <div class="container">
                     <p>
@@ -78,7 +78,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="maharani">
+            <a class="klikgambar" href="pemesanan.html"><div class="maharani">
                 <img src="Gambar Mlakujatim/gua maharani lamongan.jpg" alt="alam"><br>
                 <div class="container">
                     <p>
@@ -87,7 +87,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="telaga">
+            <a class="klikgambar" href="pemesanan.html"><div class="telaga">
                 <img src="Gambar Mlakujatim/telaga-sarangan-300x225.jpg" alt="alam"><br>
                 <div class="container">
                     <p>
@@ -96,7 +96,7 @@
                     </p>
                 </div>
             </div></a>
-            <a class="klikgambar" href=""><div class="airterjun">
+            <a class="klikgambar" href="pemesanan.html"><div class="airterjun">
                 <img src="Gambar Mlakujatim/Air-Terjun-Madangkaripura-Probolinggo-300x200.jpg" alt="alam"><br>
                 <div class="container">
                     <p>
