--- a/bank.html
+++ b/bank.html
@@ -40,7 +40,7 @@
             <input type="date" id="tgl">
         </div>
         <div class="byr">
-            <a class="noneklik" href="#"><button type="submit">Bayar Sekarang</button></a>
+            <a class="noneklik" href="metodebyr.html"><button type="submit">Bayar Sekarang</button></a>
         </div>
     </div>
 </body>
