--- a/pemesanan.html
+++ b/pemesanan.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="atas">
         <div class="judul">
-            <h1>PANTAI WOTU OLU</h1>
+            <h1>PANTAI WATU ULO</h1>
             <div class="wilayah">
                 <p>Sumberrejo, Ambulu</p>
             </div>
@@ -75,7 +75,7 @@
         </div>
     </div>
     <div class="akhir">
-        <a href="#"></a><button type="submit">Pesan</button>
+        <a href="bank.html"><button type="submit">Pesan</button></a>
     </div>
     <br>
     <br>
