--- a/pencarian.html
+++ b/pencarian.html
@@ -10,9 +10,9 @@
     <nav>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a  class="klik" href="#">Booking</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a  class="klik" href="alam.html">Booking</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
