revisi beberapa code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
         <ul>
-            <li><a class="klik" href="home.html">Home</a></li>
+            <li><a class="klik" href="index.html">Home</a></li>
             <li><a href="alam.html">Booking</a></li>
             <li><a href="profile.html">Profile</a></li>
             <li><a id="login" href="login 1.html">Login</a></li>
