--- a/login 1.html
+++ b/login 1.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scle-1.0">
     <link rel="stylesheet" href="login 1.css">
-    <title>Log <input type="text" name="" id=""></title>
+    <title>Log In</title>
 </head>
 <body>
     <div class="container">
         <form id="form" class="form">
             <h1>Log In</h1>
             <div class="form-control">
-                <label for="username">Email/Username</label>
+                <label for="username">Email/Mobile Number</label>
                 <input type="text" id="username" placeholder="Masukan email/username">
             </div>
             <div class="form-control">
@@ -23,7 +23,7 @@
             </div>
             <br>
             <div class="form-control">
-                <button type="submit"><a class="klik" href="home.html">Log In</a></button>
+                <button type="submit"><a class="klik" href="index.html">Log In</a></button>
             </div>
             <br>
             <br>
