add js and edit navbar
ada yang berubah, tapi belum full responsive

--- a/budaya.html
+++ b/budaya.html
@@ -25,7 +25,10 @@
             <a id="panah2" href="museum.html"><img src="Gambar Mlakujatim/panah kanan.png" alt=""></a>
         </div>
         <div class="cari">
-            <input type="text" id="cari" placeholder="Cari">
+            <input type="text" id="cari" placeholder="Cari tempat wisata . . .">
+            <div id="btncari">
+                <a href="pencarian.html" id="btna"><button type="submit">cari</button></a>
+            </div>
         </div>
     </div>
     <h2>DESTINASI</h2>
