--- a/form pweb.html
+++ b/form pweb.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulir Pendaftaran</title>
     <link rel="stylesheet" href="form pweb.css">
+    <script src="form pweb.js"></script>
 </head>
 <body>
     <FORM>
@@ -77,7 +78,7 @@
                     </div>
                     <br>
                     <div class="tombol">
-                        <button type="submit"><a class="akun" href="login 1.html"> Buat Akun</a></button>
+                        <button type="submit" onclick="inputdata()"><a class="akun" href="login 1.html"> Buat Akun</a></button>
                     </div>
                 </div>               
             </table>
