--- a/pencarian.html
+++ b/pencarian.html
@@ -17,7 +17,10 @@
         </ul>
     </nav>
     <div class="cari">
-        <input type="text" id="cari" placeholder="Cari">
+        <input type="text" id="cari" placeholder="Cari tempat wisata . . .">
+        <div id="btncari">
+            <a href="pencarian.html" id="btna"><button type="submit">cari</button></a>
+        </div>
         <p>Hasil Pencarian:</p>
     </div>
     <div class="daftar">
