--- a/sign up.html
+++ b/sign up.html
@@ -12,10 +12,10 @@
             <h1>Sign Up</h1>
             <div class="form-control">
                 <label for="username">Mobile Number or Email</label>
-                <input type="text" placeholder="Mobile Number or Email">
+                <input type="text" id="signup" placeholder="Mobile Number or Email">
             </div>
             <div class="form-control">
-                <button type="submit"><a class="lanjutan" href="form pweb.html">Continue</a></button>
+                <button type="submit" onclick="signup()"><a class="lanjutan" href="form pweb.html">Continue</a></button>
             </div>
             <br>
             <br>
